--- a/gallery-1.html
+++ b/gallery-1.html
@@ -2,15 +2,18 @@
 <html lang="en">
 
 <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <link rel="icon" href="imgs/favicon.ico">
-
-    <title>Douglas Titus Photography</title>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="author" content="Douglas Titus">
+  <title>Gallery Photography of Douglas Titus Fine Art Photographer | Portraits |Portrait Photography Grand Rapids Michigan Photographer</title>
+  <meta name="Description" content="Commercial Event Portrait Fine Art Photographer located in the Grand Rapids Michigan">
+  <meta name="Keywords" content="Photographer, Grand Rapids, Portrait Photographer, Wedding Photographer, Wedding Photography, Portrait Photography, Kids Photography, Event Photography, Event Photographer">
+  <meta name="geo.region" content="US-MI" />
+  <meta name="geo.placename" content="Grand Rapids" />
+  <meta name="geo.position" content="42.955831;-85.643562" />
+  <meta name="ICBM" content="42.955831, -85.643562" />
+  <link rel="icon" href="imgs/favicon.ico">
 
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
