--- a/children.html
+++ b/children.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="author" content="Douglas Titus">
-    <title>Douglas Titus Weddings | Fine Art Photography | Portraits | Portrait Photography Grand Rapids Michigan</title>
+    <title>Douglas Titus Photographer | Fine Art Photography | Portraits | Portrait Photography | Children Portraits | Kid&#39;s photos |Grand Rapids Michigan</title>
     <meta name="Description" content="Commercial Event Portrait Fine Art Photographer located in the Grand Rapids Michigan">
     <meta name="Keywords" content="Photographer, Grand Rapids, Portrait Photographer, Wedding Photographer, Wedding Photography, Portrait Photography, Kids Photography, Event Photography, Event Photographer">
     <meta name="geo.region" content="US-MI" />
@@ -99,9 +99,9 @@
 
         <main role="main" class="container-fluid ">
 
-              <h2 class="weddingHeader">Event Photography</h2>
+              <h2 class="weddingHeader">Portraits</h2>
 
-                <img src="imgs/malin-ryan-portrait.jpg" class="img-fluid desktopImage" alt="Responsive image"> </a>
+                <img src="imgs/willow-eames-hero-ground.jpg" class="img-fluid desktopImage" alt="Responsive image"> </a>
 
 
 
@@ -123,26 +123,24 @@
       </div>
 
       <div class="form-group">
-        <input type="text" class="form-control" id="eventDate" placeholder="Event Date" name="eventDate">
+        <input type="number" class="form-control" id="kidsAge" placeholder="Child&#39;s Age" name="eventDate">
       </div>
 <div class="spacer"> </div>
-      <button type="button" id="wedding-submit-form" class="btn btn-secondary">Contact</button>
+      <button type="button" id="children-submit-form" class="btn btn-secondary">Contact</button>
     </form>
   </div>
+
+
   <footer class="footer">
-  <div class="container">
+<div class="container">
   <center>
   <span class="text-muted"><a href="http://douglastitus.com"</a><i class="fas fa-home fa-2x" ></i></span>
   </center>
 
   <div class="spacer2"> </div>
 
-  </div>
-  </footer>
-            </div>
-
-        </main>
-        <!-- /.container -->
+</div>
+</footer>
             </div>
 
         </main>
@@ -157,6 +155,8 @@
         <script src="js/bootstrap.min.js"></script>
         <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
         <script src="js/app.js"></script>
+
+
 
 </body>
 
