--- a/gallery-1.html
+++ b/gallery-1.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="author" content="Douglas Titus">
-  <title>Gallery Photography of Douglas Titus Fine Art Photographer | Portraits |Portrait Photography Grand Rapids Michigan Photographer</title>
+  <title>Open Source Photo Gallery</title>
   <meta name="Description" content="Commercial Event Portrait Fine Art Photographer located in the Grand Rapids Michigan">
   <meta name="Keywords" content="Photographer, Grand Rapids, Portrait Photographer, Wedding Photographer, Wedding Photography, Portrait Photography, Kids Photography, Event Photography, Event Photographer">
   <meta name="geo.region" content="US-MI" />
