--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="author" content="Douglas Titus">
-    <title>Douglas Titus Fine Art Photography | Portraits | Weddings | Wedding| Portrait Photography | Grand Rapids Michigan</title>
+    <title>Open Source Photo Gallery</title>
     <meta name="Description" content="Commercial Event  Wedding Portrait Fine Art Photographer located in the Grand Rapids Michigan">
     <meta name="Keywords" content="Photographer, Grand Rapids, Portrait Photographer, Wedding Photographer, Wedding Photography, Portrait Photography, Kids Photography, Event Photography, Event Photographer">
     <meta name="geo.region" content="US-MI" />
@@ -125,9 +125,9 @@
                 <img src="imgs/elias-full-screen-sm.jpg" class="img-fluid desktopImage" alt="Responsive image"> </a>
                 <a href="gallery-1.html" target="_blank">
                 <img src="imgs/titus_douglas_pdn1.jpg" class="img-fluid  mobileImage" alt="Responsive image"> </a>
-                <h1 class="mainHeader ">Look Mom No Hands</h1>
+                <h1 class="mainHeader ">Open Source Photo Gallery</h1>
                 <p class="lead ">Photography
-                    <br> 2006 - 2019</p>
+                    <br> 1827 - 2020</p>
             </div>
 
         </main>
